--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Memulai dengan HTML</title>
+    <title>Judul dan Paragraf</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>Selamat Datang di Informatika SiberMu</h1>
+    <h2>Tentang HTML</h2>
+    <p>HTML merupakan singkatan dari HyperText Markup Language</p>
 </body>
-</html>memulai-dengan-html
+</html>
